# kodi.kino.pub

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  addon.py  addon.xml  build.sh  default.py  make.sh  pyproject.toml  requirements_dev.in  requirements_dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  deploy.yaml  tests.yaml
plugin.video.kino.pub/: addon.xml  default.py
plugin.video.kino.pub/resources/: settings.xml
plugin.video.kino.pub/resources/lib/: addonutils.py  addonworker.py  authwindow.py
repo_src/: addon.xml  addons.xml
resources/: settings.xml
resources/lib/: addonutils.py  addonworker.py  auth.py  authwindow.py  client.py  context_menu.py  data.py  listitem.py  logger.py  main_menu.py  player.py  settings.py  speedtest.py  utils.py
src/: addon.py  addon.xml  services.py
src/resources/: settings.xml
src/resources/lib/: __init__.py  addonworker.py  auth.py  client.py  listitem.py  logger.py  main.py  main_menu.py  modeling.py  player.py  plugin.py  (+7 more)
tests/: conftest.py  expected_results.py  helpers.py  paths.py  responses.py  test_basics.py  test_bookmarks.py  test_client.py  test_http_errors.py  test_integration.py  test_items.py  test_listitem.py  test_modeling.py  test_plugin.py  test_proxy.py  test_routing.py  test_search.py  test_search_history.py  test_settings.py  test_unit.py  test_utils.py  tests.py
video.kino.pub/: addon.xml  default.py  tests.py
video.kino.pub/resources/: settings.xml
video.kino.pub/tests/: responses.py  tests.py
(+20 files in other folders)
